# pypi-mono

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
openspec/changes/archive/2026-05-08-migrate-to-python/: proposal.md  tasks.md
openspec/changes/archive/2026-05-08-migrate-to-python/specs/tool-system/: spec.md
openspec/changes/migrate-to-python/: design.md
openspec/changes/migrate-to-python/specs/cli-application/: spec.md
openspec/specs/agent-runtime/: spec.md
openspec/specs/llm-api-abstraction/: spec.md
openspec/specs/streaming-events/: spec.md
