[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypi-mono"
version = "0.1.0"
description = "Monorepo for Python packages publishing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "N3urda" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
